--- a/index.html
+++ b/index.html
@@ -1,48 +1,78 @@
 <html>
 <head>
-<title>Sefa Dedebek</title>
 
+<title>Sefa Dedebek</title>
 
 </head>
 
-<body bgcolor="grey" >
+<body bgcolor="grey">
 
-<table width="1000" height="100" border="1" align="center" bgcolor="white" cellpadding="6"  >
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127380325-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-127380325-1');
+</script>
+
+
+
+<table width="1000" height="800" border="1" align="center" bgcolor="white">
 <tr>
-<td colspan="5" height="150" ><img src="img/logo.jpg"/ ></td>
+<td colspan="5" height="150"><img src="img/logo.jpg"/></td>
 </tr>
 <tr height="5">
-<td align="center"><a href="index.html"><font size="">HAKKIMDA</font></a></td>
+<td align="center"><a href="index.html"><font size="">ANASAYFA</font></a></td>
 <td align="center"><a href="ogrenim.html">ÖĞRENİM</a></td><td align="center"><a href="projeler.html">PROJELER</a></td>
 <td align="center"><a href="iletisim.html">İLETİŞİM</a></td>
+<td align="center"><a href="cv.html">CV</a></td>
+
 </tr>
 <tr>
-<td        valign="top"   height="900" colspan="5" > 
+
+<tr>
+<td colspan="5" valign="top" height="900" >
+
+<center>
+<span>
+<font size="5"  >
 
 Ben Sefa Dedebek.
- 1997 yılında Erzincan'da doğdum. Aslen Artvin'liyim. Güvenlik İlkokulu, Müşir Zeki Paşa Ortaokulu ve Erzincan Fen Lisesi mezunuyum. Gazi Üniversitesi Bilgisayar Mühendisliği Bölümü 1. Sınıf Öğrencisiyim.
-
-
-
- </td>
-</tr>
-</table>
-
-<table                                    align="center"  >
-<tr>
-<td align="center">  
+ 1997 yılında Erzincan'da doğdum. Aslen Artvin'liyim. Erzincan Fen Lisesi mezunuyum. Gazi Üniversitesi Bilgisayar Mühendisliği Bölümü 1. Sınıf Öğrencisiyim.
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+</font>
+
+<br>
+</span>
+
+</center>
 
 </td>
+</tr>
+
+</table>
+<table>
+<tr>
+
 
 </tr>
 </table>
-
-
 </body>
 
 <center>
@@ -56,6 +86,9 @@ Ben Sefa Dedebek.
 <a href="https://www.youtube.com" target="_blank"><img     width="50" height="50"   src="img/y1.png" title="YouTube"/></a>
 
 
+
 </center>
+
+
 
 </html>
