--- a/ogrenim.html
+++ b/ogrenim.html
@@ -14,6 +14,8 @@
 <td align="center"><a href="index.html"><font size="">HAKKIMDA</font></a></td>
 <td align="center"><a href="ogrenim.html">ÖĞRENİM</a></td><td align="center"><a href="projeler.html">PROJELER</a></td>
 <td align="center"><a href="iletisim.html">İLETİŞİM</a></td>
+<td align="center"><a href="cv.html">CV</a></td>
+
 </tr>
 <tr>
 
@@ -24,7 +26,7 @@
 
 
 Güvenlik İlkokulu <br>
-Müşir Zeki Paşa İlkokulu <br>
+Müşir Zeki Paşa Ortaokulu <br>
 Erzincan Fen Lisesi
 
  </td>
