--- a/iletisim.html
+++ b/iletisim.html
@@ -14,6 +14,8 @@
 <td align="center"><a href="index.html"><font size="">HAKKIMDA</font></a></td>
 <td align="center"><a href="ogrenim.html">ÖĞRENİM</a></td><td align="center"><a href="projeler.html">PROJELER</a></td>
 <td align="center"><a href="iletisim.html">İLETİŞİM</a></td>
+<td align="center"><a href="cv.html">CV</a></td>
+
 </tr>
 <tr>
 
@@ -23,10 +25,21 @@
 <center> </center>
 <center>
 <span>
-<font size="5"  color="red">
-E-mail: sefadedebek@gmail.com<br>
+<font size="5" color="0" >
+
+<b>
+
+Email: sefadedebek@gmail.com  <br>
  <br>
- <br>
+
+Adres : Gazi Üniversitesi Mühendislik Fakültesi Eti Mh. Yükseliş Sk. No: 5, 06570 Maltepe / Ankara. <br>
+<br>
+
+</b>
+
+<iframe src="https://www.google.com/maps/d/embed?mid=1phiHdLufBNexz2km1uKqBC1OqZ-kpnCx" width="640" height="480"></iframe>
+
+
 
 </font>
 
