--- a/projeler.html
+++ b/projeler.html
@@ -14,6 +14,8 @@
 <td align="center"><a href="index.html"><font size="">HAKKIMDA</font></a></td>
 <td align="center"><a href="ogrenim.html">ÖĞRENİM</a></td><td align="center"><a href="projeler.html">PROJELER</a></td>
 <td align="center"><a href="iletisim.html">İLETİŞİM</a></td>
+<td align="center"><a href="cv.html">CV</a></td>
+
 </tr>
 <tr>
 
