--- a/cv.html
+++ b/cv.html
@@ -12,8 +12,8 @@
 </tr>
 <tr height="5">
 <td align="center"><a href="index.html"><font size="">ANASAYFA</font></a></td>
-<td align="center"><a href="ogrenim.html">ÖĞRENİM</a></td><td align="center"><a href="projeler.html">PROJELER</a></td>
-<td align="center"><a href="iletisim.html">İLETİŞİM</a></td>
+<td align="center"><a href="ogrenim.html">Ã–ÄRENÄ°M</a></td><td align="center"><a href="projeler.html">PROJELER</a></td>
+<td align="center"><a href="iletisim.html">Ä°LETÄ°ÅÄ°M</a></td>
 <td align="center"><a href="cv.html">CV</a></td>
 
 </tr>
@@ -40,7 +40,7 @@
 
 
 
-<b> 2)Geliştirilen Projeler    </b><br />
+<b> 2)GeliÅŸtirilen Projeler    </b><br />
 
 - Massively Multiplayer Online Role Playing Game Project   <br>
  
@@ -51,12 +51,12 @@
 <br>
 
 
-<b> 3)Katıldığı Konferanslar   </b><br />
+<b> 3)KatÄ±ldÄ±ÄŸÄ± Konferanslar   </b><br />
 
 
-- ODTÜ Bireysel Gelişim Günleri      <br>
+- ODTÃœ Bireysel GeliÅŸim GÃ¼nleri      <br>
 
-- Pro-G Öğrenci Topluluğu Savunma Sanayi Konferans   <br>
+- Pro-G Ã–ÄŸrenci TopluluÄŸu Savunma Sanayi Konferans   <br>
 
 <br>
 
@@ -71,33 +71,33 @@
 
 
 
-<b> 5)Katıldığı Yarışmalar     </b><br />
+<b> 5)KatÄ±ldÄ±ÄŸÄ± YarÄ±ÅŸmalar     </b><br />
 
 
-- TEKNOFEST SÜRÜ İHA YARIŞMASI                           <br>
+- TEKNOFEST SÃœRÃœ Ä°HA YARIÅMASI                           <br>
 
-- ODTÜ Bilgisayar Topluluğu 20. Programlama Yarışması    <br>
+- ODTÃœ Bilgisayar TopluluÄŸu 20. Programlama YarÄ±ÅŸmasÄ±    <br>
 
 <br>
 
 <b> 6)Sertifikalar             </b><br />
 
-- İnsan Kaynakları Yönetimi    <br>
+- Ä°nsan KaynaklarÄ± YÃ¶netimi    <br>
 
-- Grafik Tasarım ve Animasyon    <br>
+- Grafik TasarÄ±m ve Animasyon    <br>
 
-
-<br>
-
-<b> 7)İş Tecrübeleri                       </b><br />
-
-- AssisTT/ Müşteri Temsilcisi / 2016-2017   <br>
 
 <br>
 
-<b> 8)Patent, TÜBİTAK Projeleri                        </b><br />
+<b> 7)Ä°ÅŸ TecrÃ¼beleri                       </b><br />
 
-- Deniz Ürerindeki Katı Atıkları Toplayan Akıllı Robot Yazılımının Geliştirilmesi  <br>
+- AssisTT/ MÃ¼ÅŸteri Temsilcisi / 2016-2017   <br>
+
+<br>
+
+<b> 8)Patent, TÃœBÄ°TAK Projeleri                        </b><br />
+
+- Deniz Ãœrerindeki KatÄ± AtÄ±klarÄ± Toplayan AkÄ±llÄ± Robot YazÄ±lÄ±mÄ±nÄ±n GeliÅŸtirilmesi  <br>
 
 
 
