--- a/cv.html
+++ b/cv.html
@@ -65,7 +65,7 @@
 - In English: B. Ozcakmak, O. Milletsever, S. Dedebek "A Web Based Face Counter Prediction System from Only Fingerprints", Proceedings of The 11th International Conference on Machine Learning and Applications (ICMLA'12), Dec 12-15, 2012, Boca Raton, USA, 2012.             <br>
 
 
--In English:  B. Ozcakmak, O. Milletsever, S Dedebek "A New Intelligent Steganalysis Method for Waveform Audio Steganography", Proceedings of The 11th International Conference on Machine Learning and Applications (ICMLA'12), Dec 12-15, 2012, Boca Raton, USA, 2012.        <br>    
+-In English:  B. Ozcakmak, O. Milletsever, S. Dedebek "A New Intelligent Steganalysis Method for Waveform Audio Steganography", Proceedings of The 11th International Conference on Machine Learning and Applications (ICMLA'12), Dec 12-15, 2012, Boca Raton, USA, 2012.        <br>    
 
 <br>
 
@@ -131,6 +131,10 @@
 <a href="https://www.instagram.com/sefadedebek/" target="_blank"><img   width="50" height="50"     src="img/i1.png" title="Instagram"/></a>
 
 <a href="https://www.youtube.com" target="_blank"><img     width="50" height="50"   src="img/y1.png" title="YouTube"/></a>
+
+<a href="https://plus.google.com"><img     width="50" height="50"   src="img/g1.png" title="Google+"/></a>
+
+<a href="https://tr.pinterest.com/"><img     width="50" height="50"   src="img/p1.png" title="Pinterest"/></a>
 
 
 
