--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@ Ben Sefa Dedebek.
 
 <a href="https://www.youtube.com" target="_blank"><img     width="50" height="50"   src="img/y1.png" title="YouTube"/></a>
 
+<a href="https://plus.google.com"><img     width="50" height="50"   src="img/g1.png" title="Google+"/></a>
+
+<a href="https://tr.pinterest.com/"><img     width="50" height="50"   src="img/p1.png" title="Pinterest"/></a>
+
 
 
 </center>
